# rplsh

./: .gitignore  LICENSE  Makefile  README.md  RPLSH_fact_sheet.pptx  install.sh
aux/: aux.hpp  ff_comp.hpp  types.hpp  wrappers.hpp
business/: business.hpp
examples/: business.hpp  example1  example2  example3  example4  import1.rpl  mainopt_example  optmapfarm.rpl  optmapred.rpl  simple.rpl
rpl/: .gitignore  Makefile  annotation.hpp  annotators.hpp  (+38 more)
rpl-shell/: CMakeLists.txt  rplsh.cpp
rpl-shell/rpl/: CMakeLists.txt  history.cpp  history.hpp  interpreter.cpp  interpreter.hpp  parameters.hpp
rpl-shell/rpl/cpp_parser/: CMakeLists.txt  cpp_parser.cpp  cpp_parser.hpp
rpl-shell/rpl/dispatchers/: ann_dispatcher.hpp  eval_dispatcher.hpp  get_dispatcher.hpp  opt_dispatcher.hpp  rr_dispatcher.hpp  set_dispatcher.hpp  visitor_dispatcher.hpp
rpl-shell/rpl/environment/: CMakeLists.txt  rpl_environment.cpp  rpl_environment.hpp
rpl-shell/rpl/error/: CMakeLists.txt  error_report.hpp  style.hpp
rpl-shell/rpl/error_report/: CMakeLists.txt  error_report.cpp  error_report.hpp
rpl-shell/rpl/nodes/: CMakeLists.txt  node_forwards.hpp  node_interface.hpp  skeletons.cpp  skeletons.hpp  tree_matcher.hpp  verbs.cpp  verbs.hpp
rpl-shell/rpl/parser/: CMakeLists.txt  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
rpl-shell/rpl/rewriting/: CMakeLists.txt  rewriter.hpp  rewrules.cpp  rewrules.hpp
rpl-shell/rpl/utils/: mytuple.hpp  printable.hpp  rank.hpp  utils.hpp
rpl-shell/rpl/visitors/: CMakeLists.txt  visitor_interface.hpp  visitors.cpp  visitors.hpp
rpl-shell/rpl/visitors/annotators/: CMakeLists.txt  annotators.cpp  annotators.hpp
rpl-shell/rpl/visitors/evaluators/: CMakeLists.txt  evaluators.cpp  evaluators.hpp
rpl-shell/rpl/visitors/generators/: CMakeLists.txt  compseq_setter.cpp  compseq_setter.hpp  ffcode.cpp  ffcode.hpp  ffmapper.cpp  ffmapper.hpp
rpl-shell/rpl/visitors/optimizers/: CMakeLists.txt  normalform.cpp  normalform.hpp  optimizers.cpp  optimizers.hpp
(+30 files in other folders)
